# Founder_OS

./: .cursorrules  .gitignore  docker-compose.yml
.github/workflows/: deploy.yml
apps/api/: .env.example  .env.production.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5c3fc8142ee8_create_users_and_workspaces_tables.py  a1b2c3d4e5f6_create_phases_milestones_diary_entries.py  b3c4d5e6f7a8_create_knowledge_base_tables.py  c4d5e6f7g8h9_add_notes_to_milestones.py
apps/api/app/: config.py  database.py  dependencies.py  main.py
apps/api/app/models/: __init__.py  base.py  conversation.py  diary_entry.py  document.py  document_chunk.py  message.py  milestone.py  phase.py  user.py  workspace.py
apps/api/app/routers/: auth.py  chat.py  diary.py  documents.py  milestones.py
apps/api/app/schemas/: auth.py  chat.py  diary.py  documents.py  milestones.py
apps/api/app/services/: auth.py  chat.py  diary.py  documents.py  milestone_import.py  milestones.py
apps/api/tests/: conftest.py  test_auth.py  test_chat.py  test_database.py  test_dependencies.py  test_diary.py  test_documents.py  test_health.py  test_milestones.py
apps/mobile/: app.json  package-lock.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/mobile/constants/: api.ts  theme.ts
apps/mobile/hooks/: use-auth.tsx  use-chat.ts  use-diary.ts  use-documents.ts  use-milestones.ts
apps/mobile/services/: api.ts  auth.ts  chat.ts  diary.ts  documents.ts  milestones.ts
deploy/: founderos-api.service  nginx-founderos.conf  redeploy-web.sh  redeploy.sh  setup-droplet.sh
docs/: ARCHITECTURE.md  HANDOFF.md  PROJECT_BRIEF.md
(+25 files in other folders)
